AUTOSP

2016-11-02

  support xtuples in more than one staff (provided x and note durations are
  consistent)

2016-10-26

  \ptr distinguished from \pt

2016-10-20

  BARREST_SPACING replaced by MAX_SPACING

2016-03-02

  Process \rlap{...} as non-spacing.
  Process numeric notes in collective coding.
  Process transposition characters ('`!) after a collective note.

2016-01-30

  Correct coding for \tqq and \tqqq.
  ps(0) outputs "0" rather than "MAX_SPACING"
  Allow for \wq.
  Defer \Changeclefs until after \def\atnextbar ...
  Modern notation for multi-bar rests.
  Initial output to stdout.

2015-07-23

  Correct parsing of arguments of \zcharnote et al.
  Allow % at the end of a line in \anotes ...
  Correct nastaffs settings to allow more than one \startpiece
  Delete \mxvernumber test
  \znotes calls output_rests if single-staff and restbars > 0
  Add -l (--log) option and don't generate log by default.

2015-06-29
  add internal documentation 
  don't treat \caesura like \ca
  increase BARREST_SPACING to allow for 12/8 signatures
  treat \def\atnextbar like \def if no \centerpause
  Add extra space before outputting \en in terminate_notes.
  Process \stoppiece, \startextract, \endextract and \raggedstoppiece

2015-05-25
  Allow for double-dotted notes
  Change \cpause to \Cpause
  re-organize spacing_note analysis
  re-organize output_rests

2015-05-17
  Allow for \qqsk.
  Preclude output of *only* virtual notes.
  Support appoggiaturas.
  Support bar-centered rests.
  Support application to .tex files.
  Introduced -d option.
  Support semi-automatic beams.

2015-04-27   
  New command-line processing.
  New logging functions.
  Missing line feed in xtuplet processing.
  Allow for pointed rests \hsp, \qsp, etc.
  Save/restore global values for xtuplet duration calculation.
  Allow for empty note segments.

2015-04-21   
  1st released version


REBAR

2016-01-30

  Allow for command-line file arguments.

2015-06-29
  1st released version