@@ -1,4 +1,4 @@
-%  Generated by autosp (2016-11-02).
+%  Generated by autosp (2017-04-06).
 \input musixtex
 \input musixplt
 \input soul.sty
@@ -29,7 +29,7 @@
 \setname3{A}
 \setname4{S}
 \songtop4\songbottom1
-\fulltitle{\BIgfont \so{Quodlibet}}
+\fulltitle{\sc\so{Quodlibet}}
 \subtitle{\it Variation 30 of the Goldberg Variations for Clavier}
 \title{\it Quodlibet}
 \author{J. S. Bach (1685--1750)}
@@ -77,14 +77,14 @@
 \Notes\qa{.L}\sk\sk&\ibl1n{-1}\qb1{n}\qb1{o}\qb1{n}&\ttie2\ibl2r{-2}\qb2r\tqb2q\qa p&\ibl3n{-2}\qb3{n}\qb3{m}\qb3{l}\en
 \notes\ibbl0M2\qb0M\tqb0N\hqsk&\tqb1m\sk\hqsk&\sk\sk\hqsk&\tqb3k\sk\hqsk\en%
 \Notes\itieu0a\qa a&\ibl1l{-2}\qb1l&\qa{.o}&\shake{n}\ibl3i0\qb3{^j}\en
-\notes\sk\sk\ttie0\ibbl0a{-2}\qb0{a}\qb0{N}\qb0{M}\tqb0L\hqsk&\tqb1k\sk\cl{^j}\sk\ds\sk\hqsk&\sk\sk\sk\sk\ibbl2i2\qb2i\qsk\tqb2{^j}\hqsk&\nbbl3\qb3i\tqb3j\cu h\sk\ds\sk\hqsk\en%
+\notes\sk\sk\ttie0\ibbl0a{-2}\qb0{a}\qb0{N}\qb0{M}\qsk\tqb0L\hqsk&\tqb1k\sk\cl{^j}\sk\ds\qsk\sk\hqsk&\sk\sk\sk\sk\ibbl2i2\qb2i\qsk\tqb2{^j}\hqsk&\nbbl3\qb3i\tqb3j\cu h\sk\ds\qsk\sk\hqsk\en%
 \bar%7
 \Notes\qa{M}\sk\qa{K}\sk&\ibu1g0\qb1{f}\qb1{g}\qb1{h}\tqh1f&\ibl2k0\qb2{k}\qb2{l}\qb2{m}\tqb2k&\qa{h}\sk\qa{h}\sk\en%
 \Notes\qa{N}\sk\qa{G}\sk&\ibu1g{-2}\qb1{g}\qb1{f}\qb1{e}\tqh1d&\ibl2i4\qb2{i}\qb2{k}\qb2{n}\tqb2m&\qa{i}\sk\qa{i}\sk\en%
 \bar%8
-\vnotes0.4\elemskip&&&\en
+\nspace
 \Notes\qu{.H}&\ibu1c4\qb1{^c}&\ibl2l{-1}\qb2{.l}&\ibu3h{0}\qb3{h}\en
-\notes\sk\sk\sk\sk&\qb1{d}\sk\qb1{e}\sk&\sk\itieu2k\tbbl2\tqb2k\ttie2\ibbl2j0\qb2k\hqsk\tbbl2\qb2{^j}&\qb3{i}\sk\qb3{h}\sk\en
+\notes\sk\sk\sk\hqsk\sk&\qb1{d}\sk\qb1{e}\hqsk\sk&\sk\itieu2k\tbbl2\tqb2k\ttie2\ibbl2j0\qb2k\hqsk\tbbl2\qb2{^j}&\qb3{i}\sk\qb3{h}\hqsk\sk\en
 \Notes\cu{^J}&\itied1h\tqh1h&\itieu2l\tqb2l&\tqh3g\en%
 \notes\ql K\sk\sk\sk&\ttie1\ibu1h{-2}\qb1h\sk\tqh1g\sk&\ttie2\ibbl2l{-1}\qb2{l}\qb2{k}\qb2{l}\tqb2j&\ibu3f{-1}\qb3f\sk\tqh3e\sk\en
 \Notes\cl K&\cu f&\cl k&\cu d\en%
@@ -105,11 +105,11 @@
 \Notes\qa{N}\sk\qa{N}\sk&\ibl1l0\qb1{n}\qb1{l}\qb1{n}\tqb1l&\qa{p}\sk\qa{p}\sk&\ibl3m0\qb3{l}\qb3{p}\qb3{l}\tqb3{p}\en%
 \notes\qa{.a}\sk\sk\sk&\ibl1m{-1}\qb1{m}\sk\qb1{n}\sk&\qa{q}\sk\sk\sk&\ibbl3k2\qb3{^k}\qb3{l}\qb3{m}\tqb3n\en
 \Notes\sk&\qb1{m}&\qa{q}&\ibl3o{-2}\qb3o\en
-\notes\cl{^a}\sk\hqsk&\tqb1l\sk\hqsk&\sk\sk\hqsk&\nbbl3\qb3n\qsk\tqb3m\hqsk\en%
+\notes\cl{^a}\sk\hqsk&\tqb1l\sk\hqsk&\sk\sk\hqsk&\nbbl3\qb3n\tqb3m\hqsk\en%
 \bar%12
-\vnotes0.4\elemskip&&&\en
+\nspace
 \Notes\qa b&\ibl1k2\qb1{^k}&\ibl2o{-1}\qb2p&\ibl3n{-2}\qb3n\en
-\notes\sk\sk\qa I\sk\sk\sk\hqsk&\nbbl1\qb1l\tqb1m\itied1i\qu i\sk\sk\sk\hqsk&\qb2q\sk\qb2p\sk\tqb2o\sk\hqsk&\nbbl3\qb3m\tqb3l\qsk\ibbl3k0\qb3{^k}\qb3{l}\qb3m\tqb3k\hqsk\en%
+\notes\sk\sk\qsk\qa I\sk\sk\sk\hqsk&\nbbl1\qb1l\tqb1m\qsk\itied1i\qu i\sk\sk\sk\hqsk&\qb2q\sk\qsk\qb2p\sk\tqb2o\sk\hqsk&\nbbl3\qb3m\tqb3l\qsk\ibbl3k0\qb3{^k}\qb3{l}\qb3m\tqb3k\hqsk\en%
 \Notes\qa{.L}&\ttie1\ibu1i0\qb1i&\ibl2n0\qb2n&\itieu3l\ha l\en
 \notes\sk\sk&\nbbu1\qb1h\tqh1i&\nbbl2\qb2m\tqb2n&\sk\sk\en
 \Notes\sk&\ibu1g2\qb1g&\cl l&\sk\en
